2010-07-05  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/admin/command/component.py:
	Add a -r/--raw-output option to flumotion-command component
	invoke. When passed, it will prevent decorating and pretty-printing of
	the output. Useful if the invoked method returns binary data.

2010-06-30  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/monitor/nagios/stream.py:
	Print errors fetching a segment in stdout instead of stderr.

2010-06-29  Aitor Guevara Escalante  <aitor@flumotion.com>

	* flumotion/manager/admin.py:
	Reusing code to build avatarIds. Component method invocation
	through pb now checks if the component exists first.

2010-06-29  Aitor Guevara Escalante  <aitor@flumotion.com>

	* flumotion/manager/admin.py:
	Added component method invocation through managers pb remote call.

2010-06-28  Julien Le Goff  <jlegoff@flumotion.com>

	* flumotion/admin/command/component.py:
	Add new command to get upstream components from a component id.

2010-06-25  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/common/componentui.py:
	* flumotion/common/registry.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/consumers/shout2/shout2.xml:
	* flumotion/scenario/steps/consumptionsteps.py:
	Add rank to wizard entries to set preferred consumers.
	Use accepted-format in consumers wizard entries to know if the
	consumer can be shown in the assistant.

2010-06-22  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Alvin Delagon

	* flumotion/component/misc/porter/porter.py:
	* flumotion/component/misc/porter/porter.xml:
	Add a new porter property, require-password. If set to False the porter
	does not perform user/password checking on component socket
	connections. Defaults to True.

2010-06-21  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/test/test_registry.py:
	Fix tests.
